ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: example-app
spec:
  tls:
  - hosts:
    - your-dns-name                        # www.abc.com
    secretName: example-app-tls
  rules:
  - host: your-dns-name                     # www.abc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: example-service          # service to which you want to forward the request
            port: 
              number: 80
